# turingdb

./: .clang-format  .clangd  .cursorignore  .cursorrules  .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  CLAUDE.md  CMakeLists.txt  CODEOWNERS  CODING_STYLE.md  Dockerfile  Makefile  README.md  build_wheel.sh  ci_python.yml  dependencies.sh  flake.nix  load_env.sh  package-lock.json  package.json  pyproject.toml  query.txt  setup.sh  tsvconvert.py  turing.setup.sh  unstaged.patch
api/python/: CMakeLists.txt
api/server/: APIServer.cpp  APIServer.h  APIServiceImpl.cpp  APIServiceImpl.h  CMakeLists.txt
app2-backend/: CMakeLists.txt  TuringApp2Server.cpp  TuringApp2Server.h
common/: AnyTypeOf.h  Arena.h  BannerDisplay.cpp  BannerDisplay.h  Base64.h  BasicResult.h  BioAssert.cpp  BioAssert.h  Bitmask.h  BoostProcess.h  Buffer.cpp  Buffer.h  CMakeLists.txt  Cast.h  Command.cpp  Command.h  ControlCharacters.h  DataRegistryManager.h  Demonology.cpp  Demonology.h  EnumToString.h  EnumToType.h  EnumerateFrom.h  FastGet.h  FatalException.cpp  FatalException.h  FileUtils.cpp  FileUtils.h  JobSystem.cpp  JobSystem.h  JumpTableMacros.h  Lambdas.h  Overloaded.h  PackTypeIndex.h  Panic.cpp  Panic.h  PerfStat.cpp  PerfStat.h  Process.cpp  Process.h  (+36 more)
common/log/: LogUtils.cpp
db/: CMakeLists.txt  ComponentType.cpp  ComponentType.h  DB.cpp  DB.h  DBAccessor.cpp  DBAccessor.h  DBNetworkRange.cpp  DBNetworkRange.h  Edge.cpp  Edge.h  EdgeType.cpp  EdgeType.h  Network.cpp  Network.h  Node.cpp  Node.h  NodeDescriptor.cpp  NodeDescriptor.h  NodeType.cpp  NodeType.h  QueryStatus.h  StringRef.h  TuringConfig.cpp  TuringDB.cpp  TuringDB.h  Writeback.cpp  Writeback.h
db/core/: CMakeLists.txt  Comparator.cpp  Comparator.h  DB.cpp  DB.h  DBAccessor.h  DBComponentTypeRange.cpp  DBComponentTypeRange.h  DBEdgeTypeRange.cpp  DBEdgeTypeRange.h  DBEntity.cpp  DBEntity.h  DBEntityType.cpp  DBEntityType.h  DBIndex.h  DBNodeTypeRange.cpp  DBNodeTypeRange.h  DBObject.h  DBType.h  DBUniverse.cpp  DBUniverse.h  Edge.h  (+36 more)
dump/: CMakeLists.txt  CommitDumper.cpp  CommitLoader.h  DataPartDumper.cpp  DataPartDumper.h  DataPartInfoDumper.h  DataPartInfoLoader.h  DataPartLoader.cpp  DataPartLoader.h  DumpAndLoadManager.cpp  DumpAndLoadManager.h  DumpConfig.h  DumpResult.h  DumpUtils.cpp  DumpUtils.h  EdgeContainerDumpConstants.h  EdgeContainerDumper.h  EdgeContainerLoader.h  EdgeIndexerDumpConstants.h  EdgeIndexerDumper.h  EdgeIndexerLoader.h  EdgeTypeMapDumper.h  EdgeTypeMapLoader.h  GraphDumpHelper.h  GraphDumper.cpp  GraphDumper.h  GraphInfoDumper.h  GraphInfoLoader.h  GraphLoader.cpp  GraphLoader.h  GraphMetadataLoader.h  LabelMapDumper.h  LabelMapLoader.h  LabelSetMapDumper.h  LabelSetMapLoader.h  LoadUtils.cpp  LoadUtils.h  NodeContainerDumpConstants.h  NodeContainerDumper.h  NodeContainerLoader.h  (+17 more)
examples/: CMakeLists.txt  SimpleGraph.cpp  SimpleGraph.h  TypingGraph.cpp  TypingGraph.h
fs/: AIOEngine.cpp  AIOEngine.h  AlignedBuffer.h  ByteBuffer.h  ByteBufferIterator.h  CMakeLists.txt  File.cpp  File.h  FilePageReader.cpp  FilePageReader.h  FilePageWriter.cpp  FilePageWriter.h  FileReader.h  FileRegion.cpp  FileRegion.h  FileResult.cpp  FileResult.h  FileWriter.h  IOType.h  PageSizeConfig.h  Path.cpp  Path.h
gateway/: AESGCMEncryptor.cpp  AESGCMEncryptor.h  AddressRouter.cpp  AddressRouter.h  BackendServer.h  CMakeLists.txt  Gateway.cpp  Gateway.h  HttpProxy.cpp  HttpProxy.h  LoadBalancer.h  SupabaseConfig.h  TokenValidator.cpp  TokenValidator.h
interpreter/: AnalyzeException.cpp  AnalyzeException.h  CMakeLists.txt  QueryAnalyzer.cpp  QueryAnalyzer.h  QueryInterpreter.cpp  QueryInterpreter.h
pipeline/: CMakeLists.txt  ExecutionContext.h  Executor.cpp  Pipeline.cpp  Pipeline.h  PipelineException.cpp  PipelineException.h  PipelineMacros.h  PipelineOpcode.h  PipelineStep.cpp  PipelineStep.h
plan/: CMakeLists.txt  PlannerContext.h  PlannerException.cpp  PlannerException.h  QueryPlanner.cpp  QueryPlanner.h  QueryPlannerParams.h
regress/: .gitignore  CMakeLists.txt  pyproject.toml  run_single_test.sh
rpcserver/: CMakeLists.txt  RPCServer.cpp  RPCServer.h  RPCServerConfig.cpp  RPCServerConfig.h
samples/: .gitignore  CMakeLists.txt  run-samples.sh
server/: CMakeLists.txt  DBServerConfig.h  DBServerProcessor.cpp  DBServerProcessor.h  DBURIParser.h  Endpoints.h  ExploreNodeEdgesExecutor.h  HTTPResponseWriter.h  JsonEncoder.h  ListNodesExecutor.h  PayloadWriter.h  TuringServer.cpp  TuringServer.h
storage/: ArcManager.h  CMakeLists.txt  DataPart.cpp  DataPart.h  DataPartManager.cpp  DataPartManager.h  DataPartSpan.h  DebugDump.cpp  DebugDump.h  EdgeContainer.cpp  EdgeContainer.h  EdgeRecord.h  EntityType.h  Graph.cpp  Graph.h  GraphMetadata.h  GraphSerializer.cpp  GraphSerializer.h  ID.h  MetadataMap.h  NodeContainer.cpp  NodeContainer.h  NodeEdgeData.h  NodeRange.h  NodeRecord.h  PropertyIndexer.h  RowStore.cpp  RowStore.h  StringContainer.h
system/: CMakeLists.txt  ChangeManager.cpp  ChangeManager.h  GraphLoadStatus.cpp  GraphLoadStatus.h  GraphSerializer.cpp  GraphSerializer.h  SystemConfig.cpp  SystemConfig.h  SystemManager.cpp  SystemManager.h  TuringConfig.cpp  TuringConfig.h
test/: CMakeLists.txt  test_style_violations.cpp
tools/: CMakeLists.txt
ui/: CMakeLists.txt  SiteArchive.cpp  TuringUIServer.cpp  TuringUIServer.h  generate_archive.sh
vector/: BatchVectorCreate.h  BatchVectorSearch.h  CMakeLists.txt  FaissIdx.cpp  FaissIdx.h  LSHShardRouter.cpp  LSHShardRouter.h  LSHShardRouterLoader.cpp  LSHShardRouterLoader.h  LSHShardRouterWriter.cpp  LSHShardRouterWriter.h  LSHSignature.h  RandomGenerator.cpp  RandomGenerator.h  ShardCache.cpp  ShardCache.h  StorageManager.cpp  StorageManager.h  VecLib.cpp  VecLib.h  VecLibAccessor.cpp  VecLibAccessor.h  VecLibIdentifier.cpp  VecLibIdentifier.h  VecLibMetadata.h  VecLibMetadataLoader.cpp  VecLibMetadataLoader.h  VecLibMetadataWriter.cpp  VecLibMetadataWriter.h  VecLibShard.cpp  VecLibShard.h  VecLibStorage.h  VectorDatabase.cpp  VectorDatabase.h  VectorException.h  VectorResult.cpp  VectorResult.h  VectorSearchQuery.h  VectorSearchResult.h
(+2820 files in other folders)
