
[project]
name = "turingdb"
version = "1.16"
dependencies = [
    "auditwheel>=6.6.0",
    "boto3>=1.42.22",
    "boto3-stubs>=1.42.22",
    "click>=8.3.1",
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "orjson>=3.11.5",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.3.251219",
    "patchelf>=0.17.2.4",
    "prompt-toolkit>=3.0.52",
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/turing-db/turingdb"
Repository = "https://github.com/turing-db/turingdb"

[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project.scripts]
turingdb = "turingdb:main"

[tool.scikit-build]
cmake.build-type = "Release"
cmake.args = ["-G", "Unix Makefiles"]
build-dir = "build/"
wheel.packages = ["python/turingdb"]
wheel.exclude = [
    "regress/**",
    "samples/**",
    "neo4j/**",
    "include/**"
]

[tool.uv]
dev-dependencies = [
    "build>=0.10.0",
    "twine>=4.0.0"
]
