add_subdirectory(googletest EXCLUDE_FROM_ALL SYSTEM)
include(GoogleTest)

add_subdirectory(testutils)
add_subdirectory(common)
add_subdirectory(io)
add_subdirectory(storage)
add_subdirectory(dump)
add_subdirectory(import)
add_subdirectory(query)
add_subdirectory(system)
add_subdirectory(jobs)
add_subdirectory(v2)
add_subdirectory(serialisation)
